[package]
name = "paya"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38.0+1.3.281"
ash-window = "0.13.0"
bitflags = "2.4.2"
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", branch = "ash-0.38" }
petgraph = "0.6.4"
raw-window-handle = "0.6.0"
shaderc = "0.8.3"
regex = "1.10.3"
slotmap = "1.0.7"

[features]
render_manager = []
